# mathfmt

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude/: memory.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: formula-syntax.md  workflow.md
examples/: README.md
skills/mathfmt/: SKILL.md
skills/mathfmt/agents/: openai.yaml
skills/mathfmt/references/: paper-notation.md
src/mathfmt/: __init__.py  _version.py  cli.py  core.py  omml.py  update.py  validate.py
tests/: helpers.py  test_acceptance.py  test_cli.py  test_core.py  test_docx.py  test_formula.py  test_omml.py  test_skill.py  test_update.py  test_validate.py
tests/acceptance/: .gitignore  doc01_basic.docx  doc02_advanced.docx  doc03_mixed.docx  doc04_edge_cases.docx  doc05_textbook.docx  gen_docs.py
