[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathfmt"
dynamic = ["version"]
description = "Typeset plain-text formulas in DOCX files as native Word equations — cross-platform, no Office required."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Leo", email = "gml853503962@gmail.com" }]
keywords = ["docx", "word", "math", "omml", "equation", "typesetting", "cross-platform"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Office Suites",
  "Topic :: Text Processing :: Markup :: XML",
]
dependencies = ["lxml>=5.0"]

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0", "pytest-cov>=7.0", "ruff>=0.6"]

[project.scripts]
mathfmt = "mathfmt.cli:main"

[project.urls]
Homepage = "https://github.com/gml853503962-creator/mathfmt"
Repository = "https://github.com/gml853503962-creator/mathfmt"
Issues = "https://github.com/gml853503962-creator/mathfmt/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = {attr = "mathfmt._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --basetemp=.pytest_tmp --cov=mathfmt --cov-branch --cov-report=term-missing --cov-report=xml:coverage.xml --cov-report=html:htmlcov --cov-fail-under=85"
testpaths = ["tests"]
filterwarnings = [
  "ignore::pytest.PytestCacheWarning",
]
markers = [
  "native_xsl: requires Microsoft Office MML2OMML.XSL",
]

[tool.coverage.run]
branch = true
source = ["mathfmt"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
  "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "I", "UP"]
